@@ -1,3 +1,7 @@
+20120622
+added fillets
+added lug line notch
+
 20120608
 Fixed #!
 added requirement for svgfig
